# fxp

./: CMakeLists.txt  LICENSE  fixedpoint.c  fixedpoint.h  fxp.hpp  fxp_tests.cpp  tests.c
